# src/models/docx.model.go
@@ -1,1 +1,5 @@
 package models
+
+type ContextRequestBodyForDocx struct {
+	Model string `form:"model" json:"model"`
+}
